@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2020 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,7 +16,6 @@
 
 package org.springframework.boot.actuate.autoconfigure.endpoint.web.documentation;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
@@ -50,21 +49,23 @@ class BeansEndpointDocumentationTests extends MockMvcEndpointDocumentationTests 
 
 	@Test
 	void beans() throws Exception {
-		List<FieldDescriptor> beanFields = Arrays.asList(fieldWithPath("aliases").description("Names of any aliases."),
+		List<FieldDescriptor> beanFields = List.of(fieldWithPath("aliases").description("Names of any aliases."),
 				fieldWithPath("scope").description("Scope of the bean."),
 				fieldWithPath("type").description("Fully qualified type of the bean."),
-				fieldWithPath("resource").description("Resource in which the bean was defined, if any.").optional()
-						.type(JsonFieldType.STRING),
+				fieldWithPath("resource").description("Resource in which the bean was defined, if any.")
+					.optional()
+					.type(JsonFieldType.STRING),
 				fieldWithPath("dependencies").description("Names of any dependencies."));
 		ResponseFieldsSnippet responseFields = responseFields(
 				fieldWithPath("contexts").description("Application contexts keyed by id."), parentIdField(),
 				fieldWithPath("contexts.*.beans").description("Beans in the application context keyed by name."))
-						.andWithPrefix("contexts.*.beans.*.", beanFields);
-		this.mockMvc.perform(get("/actuator/beans")).andExpect(status().isOk())
-				.andDo(document("beans",
-						preprocessResponse(
-								limit(this::isIndependentBean, "contexts", getApplicationContext().getId(), "beans")),
-						responseFields));
+			.andWithPrefix("contexts.*.beans.*.", beanFields);
+		this.mockMvc.perform(get("/actuator/beans"))
+			.andExpect(status().isOk())
+			.andDo(document("beans",
+					preprocessResponse(
+							limit(this::isIndependentBean, "contexts", getApplicationContext().getId(), "beans")),
+					responseFields));
 	}
 
 	private boolean isIndependentBean(Entry<String, Map<String, Object>> bean) {
