@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2019 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,7 +16,6 @@
 
 package org.springframework.boot.actuate.autoconfigure.endpoint.web.documentation;
 
-import java.util.Arrays;
 import java.util.List;
 
 import liquibase.changelog.ChangeSet.ExecType;
@@ -48,18 +47,18 @@ class LiquibaseEndpointDocumentationTests extends MockMvcEndpointDocumentationTe
 	@Test
 	void liquibase() throws Exception {
 		FieldDescriptor changeSetsField = fieldWithPath("contexts.*.liquibaseBeans.*.changeSets")
-				.description("Change sets made by the Liquibase beans, keyed by bean name.");
-		this.mockMvc.perform(get("/actuator/liquibase")).andExpect(status().isOk())
-				.andDo(MockMvcRestDocumentation.document("liquibase",
-						responseFields(fieldWithPath("contexts").description("Application contexts keyed by id"),
-								changeSetsField)
-										.andWithPrefix("contexts.*.liquibaseBeans.*.changeSets[].",
-												getChangeSetFieldDescriptors())
-										.and(parentIdField())));
+			.description("Change sets made by the Liquibase beans, keyed by bean name.");
+		this.mockMvc.perform(get("/actuator/liquibase"))
+			.andExpect(status().isOk())
+			.andDo(MockMvcRestDocumentation.document("liquibase",
+					responseFields(fieldWithPath("contexts").description("Application contexts keyed by id"),
+							changeSetsField)
+						.andWithPrefix("contexts.*.liquibaseBeans.*.changeSets[].", getChangeSetFieldDescriptors())
+						.and(parentIdField())));
 	}
 
 	private List<FieldDescriptor> getChangeSetFieldDescriptors() {
-		return Arrays.asList(fieldWithPath("author").description("Author of the change set."),
+		return List.of(fieldWithPath("author").description("Author of the change set."),
 				fieldWithPath("changeLog").description("Change log that contains the change set."),
 				fieldWithPath("comments").description("Comments on the change set."),
 				fieldWithPath("contexts").description("Contexts of the change set."),
@@ -67,13 +66,14 @@ class LiquibaseEndpointDocumentationTests extends MockMvcEndpointDocumentationTe
 				fieldWithPath("deploymentId").description("ID of the deployment that ran the change set."),
 				fieldWithPath("description").description("Description of the change set."),
 				fieldWithPath("execType")
-						.description("Execution type of the change set (" + describeEnumValues(ExecType.class) + ")."),
+					.description("Execution type of the change set (" + describeEnumValues(ExecType.class) + ")."),
 				fieldWithPath("id").description("ID of the change set."),
 				fieldWithPath("labels").description("Labels associated with the change set."),
 				fieldWithPath("checksum").description("Checksum of the change set."),
 				fieldWithPath("orderExecuted").description("Order of the execution of the change set."),
-				fieldWithPath("tag").description("Tag associated with the change set, if any.").optional()
-						.type(JsonFieldType.STRING));
+				fieldWithPath("tag").description("Tag associated with the change set, if any.")
+					.optional()
+					.type(JsonFieldType.STRING));
 	}
 
 	@Configuration(proxyBeanMethods = false)
