@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2022 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,7 +18,6 @@ package org.springframework.boot.actuate.autoconfigure.endpoint.web.documentatio
 
 import java.time.Duration;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 
@@ -73,13 +72,15 @@ class MappingsEndpointReactiveDocumentationTests extends AbstractEndpointDocumen
 	@BeforeEach
 	void webTestClient(RestDocumentationContextProvider restDocumentation) {
 		this.client = WebTestClient.bindToServer()
-				.filter(documentationConfiguration(restDocumentation).snippets().withDefaults())
-				.baseUrl("http://localhost:" + this.port).responseTimeout(Duration.ofMinutes(5)).build();
+			.filter(documentationConfiguration(restDocumentation).snippets().withDefaults())
+			.baseUrl("http://localhost:" + this.port)
+			.responseTimeout(Duration.ofMinutes(5))
+			.build();
 	}
 
 	@Test
 	void mappings() {
-		List<FieldDescriptor> requestMappingConditions = Arrays.asList(
+		List<FieldDescriptor> requestMappingConditions = List.of(
 				requestMappingConditionField("").description("Details of the request mapping conditions.").optional(),
 				requestMappingConditionField(".consumes").description("Details of the consumes condition"),
 				requestMappingConditionField(".consumes.[].mediaType").description("Consumed media type."),
@@ -92,41 +93,49 @@ class MappingsEndpointReactiveDocumentationTests extends AbstractEndpointDocumen
 				requestMappingConditionField(".params").description("Details of the params condition."),
 				requestMappingConditionField(".params.[].name").description("Name of the parameter."),
 				requestMappingConditionField(".params.[].value")
-						.description("Required value of the parameter, if any."),
+					.description("Required value of the parameter, if any."),
 				requestMappingConditionField(".params.[].negated").description("Whether the value is negated."),
 				requestMappingConditionField(".patterns")
-						.description("Patterns identifying the paths handled by the mapping."),
+					.description("Patterns identifying the paths handled by the mapping."),
 				requestMappingConditionField(".produces").description("Details of the produces condition."),
 				requestMappingConditionField(".produces.[].mediaType").description("Produced media type."),
 				requestMappingConditionField(".produces.[].negated").description("Whether the media type is negated."));
-		List<FieldDescriptor> handlerMethod = Arrays.asList(
-				fieldWithPath("*.[].details.handlerMethod").optional().type(JsonFieldType.OBJECT)
-						.description("Details of the method, if any, that will handle requests to this mapping."),
+		List<FieldDescriptor> handlerMethod = List.of(
+				fieldWithPath("*.[].details.handlerMethod").optional()
+					.type(JsonFieldType.OBJECT)
+					.description("Details of the method, if any, that will handle requests to this mapping."),
 				fieldWithPath("*.[].details.handlerMethod.className").type(JsonFieldType.STRING)
-						.description("Fully qualified name of the class of the method."),
+					.description("Fully qualified name of the class of the method."),
 				fieldWithPath("*.[].details.handlerMethod.name").type(JsonFieldType.STRING)
-						.description("Name of the method."),
+					.description("Name of the method."),
 				fieldWithPath("*.[].details.handlerMethod.descriptor").type(JsonFieldType.STRING)
-						.description("Descriptor of the method as specified in the Java Language Specification."));
-		List<FieldDescriptor> handlerFunction = Arrays.asList(
-				fieldWithPath("*.[].details.handlerFunction").optional().type(JsonFieldType.OBJECT)
-						.description("Details of the function, if any, that will handle requests to this mapping."),
+					.description("Descriptor of the method as specified in the Java Language Specification."));
+		List<FieldDescriptor> handlerFunction = List.of(
+				fieldWithPath("*.[].details.handlerFunction").optional()
+					.type(JsonFieldType.OBJECT)
+					.description("Details of the function, if any, that will handle requests to this mapping."),
 				fieldWithPath("*.[].details.handlerFunction.className").type(JsonFieldType.STRING)
-						.description("Fully qualified name of the class of the function."));
-		List<FieldDescriptor> dispatcherHandlerFields = new ArrayList<>(Arrays.asList(
+					.description("Fully qualified name of the class of the function."));
+		List<FieldDescriptor> dispatcherHandlerFields = new ArrayList<>(List.of(
 				fieldWithPath("*")
-						.description("Dispatcher handler mappings, if any, keyed by dispatcher handler bean name."),
-				fieldWithPath("*.[].details").optional().type(JsonFieldType.OBJECT)
-						.description("Additional implementation-specific details about the mapping. Optional."),
+					.description("Dispatcher handler mappings, if any, keyed by dispatcher handler bean name."),
+				fieldWithPath("*.[].details").optional()
+					.type(JsonFieldType.OBJECT)
+					.description("Additional implementation-specific details about the mapping. Optional."),
 				fieldWithPath("*.[].handler").description("Handler for the mapping."),
 				fieldWithPath("*.[].predicate").description("Predicate for the mapping.")));
 		dispatcherHandlerFields.addAll(requestMappingConditions);
 		dispatcherHandlerFields.addAll(handlerMethod);
 		dispatcherHandlerFields.addAll(handlerFunction);
-		this.client.get().uri("/actuator/mappings").exchange().expectStatus().isOk().expectBody()
-				.consumeWith(document("mappings", responseFields(
-						beneathPath("contexts.*.mappings.dispatcherHandlers").withSubsectionId("dispatcher-handlers"),
-						dispatcherHandlerFields)));
+		this.client.get()
+			.uri("/actuator/mappings")
+			.exchange()
+			.expectStatus()
+			.isOk()
+			.expectBody()
+			.consumeWith(document("mappings", responseFields(
+					beneathPath("contexts.*.mappings.dispatcherHandlers").withSubsectionId("dispatcher-handlers"),
+					dispatcherHandlerFields)));
 	}
 
 	private FieldDescriptor requestMappingConditionField(String path) {
