@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2022 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,11 +17,12 @@
 package org.springframework.boot.context.properties.migrator;
 
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import org.springframework.boot.configurationmetadata.ConfigurationMetadataProperty;
 import org.springframework.boot.configurationmetadata.ConfigurationMetadataRepository;
@@ -29,6 +30,7 @@ import org.springframework.boot.context.properties.source.ConfigurationProperty;
 import org.springframework.boot.context.properties.source.ConfigurationPropertyName;
 import org.springframework.boot.context.properties.source.ConfigurationPropertySource;
 import org.springframework.boot.context.properties.source.ConfigurationPropertySources;
+import org.springframework.boot.context.properties.source.IterableConfigurationPropertySource;
 import org.springframework.boot.env.OriginTrackedMapPropertySource;
 import org.springframework.boot.origin.OriginTrackedValue;
 import org.springframework.core.env.ConfigurableEnvironment;
@@ -41,6 +43,7 @@ import org.springframework.util.StringUtils;
  * Report on {@link PropertyMigration properties migration}.
  *
  * @author Stephane Nicoll
+ * @author Moritz Halbritter
  */
 class PropertiesMigrationReporter {
 
@@ -78,34 +81,60 @@ class PropertiesMigrationReporter {
 	private PropertySource<?> mapPropertiesWithReplacement(PropertiesMigrationReport report, String name,
 			List<PropertyMigration> properties) {
 		report.add(name, properties);
-		List<PropertyMigration> renamed = properties.stream().filter(PropertyMigration::isCompatibleType)
-				.collect(Collectors.toList());
+		List<PropertyMigration> renamed = properties.stream().filter(PropertyMigration::isCompatibleType).toList();
 		if (renamed.isEmpty()) {
 			return null;
 		}
-		String target = "migrate-" + name;
-		Map<String, OriginTrackedValue> content = new LinkedHashMap<>();
-		for (PropertyMigration candidate : renamed) {
-			OriginTrackedValue value = OriginTrackedValue.of(candidate.getProperty().getValue(),
-					candidate.getProperty().getOrigin());
-			content.put(candidate.getMetadata().getDeprecation().getReplacement(), value);
+		NameTrackingPropertySource nameTrackingPropertySource = new NameTrackingPropertySource();
+		this.environment.getPropertySources().addFirst(nameTrackingPropertySource);
+		try {
+			String target = "migrate-" + name;
+			Map<String, OriginTrackedValue> content = new LinkedHashMap<>();
+			for (PropertyMigration candidate : renamed) {
+				String newPropertyName = candidate.getNewPropertyName();
+				Object value = candidate.getProperty().getValue();
+				if (nameTrackingPropertySource.isPlaceholderThatAccessesName(value, newPropertyName)) {
+					continue;
+				}
+				OriginTrackedValue originTrackedValue = OriginTrackedValue.of(value,
+						candidate.getProperty().getOrigin());
+				content.put(newPropertyName, originTrackedValue);
+			}
+			return new OriginTrackedMapPropertySource(target, content);
 		}
-		return new OriginTrackedMapPropertySource(target, content);
+		finally {
+			this.environment.getPropertySources().remove(nameTrackingPropertySource.getName());
+		}
+	}
+
+	private boolean isMapType(ConfigurationMetadataProperty property) {
+		String type = property.getType();
+		return type != null && type.startsWith(Map.class.getName());
 	}
 
 	private Map<String, List<PropertyMigration>> getMatchingProperties(
 			Predicate<ConfigurationMetadataProperty> filter) {
 		MultiValueMap<String, PropertyMigration> result = new LinkedMultiValueMap<>();
-		List<ConfigurationMetadataProperty> candidates = this.allProperties.values().stream().filter(filter)
-				.collect(Collectors.toList());
-		getPropertySourcesAsMap().forEach((name, source) -> candidates.forEach((metadata) -> {
+		List<ConfigurationMetadataProperty> candidates = this.allProperties.values().stream().filter(filter).toList();
+		getPropertySourcesAsMap().forEach((propertySourceName, propertySource) -> candidates.forEach((metadata) -> {
 			ConfigurationPropertyName metadataName = ConfigurationPropertyName.isValid(metadata.getId())
 					? ConfigurationPropertyName.of(metadata.getId())
 					: ConfigurationPropertyName.adapt(metadata.getId(), '.');
-			ConfigurationProperty configurationProperty = source.getConfigurationProperty(metadataName);
-			if (configurationProperty != null) {
-				result.add(name,
-						new PropertyMigration(configurationProperty, metadata, determineReplacementMetadata(metadata)));
+			// Direct match
+			ConfigurationProperty match = propertySource.getConfigurationProperty(metadataName);
+			if (match != null) {
+				result.add(propertySourceName,
+						new PropertyMigration(match, metadata, determineReplacementMetadata(metadata), false));
+			}
+			// Prefix match for maps
+			if (isMapType(metadata) && propertySource instanceof IterableConfigurationPropertySource iterableSource) {
+				iterableSource.stream()
+					.filter(metadataName::isAncestorOf)
+					.map(propertySource::getConfigurationProperty)
+					.forEach((property) -> {
+						ConfigurationMetadataProperty replacement = determineReplacementMetadata(metadata);
+						result.add(propertySourceName, new PropertyMigration(property, metadata, replacement, true));
+					});
 			}
 		}));
 		return result;
@@ -125,8 +154,12 @@ class PropertiesMigrationReporter {
 
 	private ConfigurationMetadataProperty detectMapValueReplacement(String fullId) {
 		int lastDot = fullId.lastIndexOf('.');
-		if (lastDot != -1) {
-			return this.allProperties.get(fullId.substring(0, lastDot));
+		if (lastDot == -1) {
+			return null;
+		}
+		ConfigurationMetadataProperty metadata = this.allProperties.get(fullId.substring(0, lastDot));
+		if (metadata != null && isMapType(metadata)) {
+			return metadata;
 		}
 		return null;
 	}
@@ -144,6 +177,35 @@ class PropertiesMigrationReporter {
 			return ((PropertySource<?>) source.getUnderlyingSource()).getName();
 		}
 		return source.getUnderlyingSource().toString();
+	}
+
+	/**
+	 * {@link PropertySource} used to track accessed properties to protect against
+	 * circular references.
+	 */
+	private class NameTrackingPropertySource extends PropertySource<Object> {
+
+		private final Set<String> accessedNames = new HashSet<>();
+
+		NameTrackingPropertySource() {
+			super(NameTrackingPropertySource.class.getName());
+		}
+
+		boolean isPlaceholderThatAccessesName(Object value, String name) {
+			if (value instanceof String) {
+				this.accessedNames.clear();
+				PropertiesMigrationReporter.this.environment.resolvePlaceholders((String) value);
+				return this.accessedNames.contains(name);
+			}
+			return false;
+		}
+
+		@Override
+		public Object getProperty(String name) {
+			this.accessedNames.add(name);
+			return null;
+		}
+
 	}
 
 }
